# authzed-rs

./: Cargo.toml  README.md  build.rs  update-proto.sh
src/: lib.rs
