[package]
edition = "2021"
name = "authzed-rs"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.9.0"
prost-types = "0.9.0"
tonic = "0.6.2"
tower = "0.4.12"

[build-dependencies]
glob = "0.3.0"
tonic-build = "0.6.2"

[features]
client = []
default = ["client", "v1"]
server = []
v0 = []
v1 = []
v1alpha1 = []
